# Skeleton

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  build.bat  build.py  gen_projects.py  lint.sh  setup.py
res/docs/: todo.txt
skeleton/: CMakeLists.txt
skeleton-core/: CMakeLists.txt
skeleton-core/cmake/: core_files.cmake  core_renderer_files.cmake  opengl_renderer_files.cmake  vulkan_renderer_files.cmake
skeleton-core/include/skeleton/: skeleton.hpp
skeleton-core/src/skeleton/: platform.hpp  skeleton.cpp
skeleton-core/src/skeleton/renderer/opengl/: opengl_renderer.hpp
skeleton-core/src/skeleton/renderer/vulkan/: vulkan_check.cpp  vulkan_check.hpp  vulkan_renderer.cpp  vulkan_renderer.hpp
skeleton-core/src/skeleton/window/: window.cpp
skeleton-editor/: CMakeLists.txt
skeleton-editor/src/skeleton-editor/: main.cpp
skeleton/cmake/: skeleton_files.cmake  skeleton_renderer_files.cmake  skeleton_renderer_opengl_files.cmake  skeleton_renderer_vulkan_files.cmake  skeleton_shader_compile_target.cmake
skeleton/include/skeleton/: application_settings.hpp  skeleton.hpp
skeleton/include/skeleton/core/: assert.hpp  build_configuration.hpp  core.hpp  platform.hpp
skeleton/include/skeleton/renderer/: renderer_backend.hpp  renderer_settings.hpp
skeleton/src/skeleton/: platform.hpp  skeleton.cpp
skeleton/src/skeleton/renderer/: renderer.hpp
skeleton/src/skeleton/renderer/common/: spv_file.cpp  spv_file.hpp
skeleton/src/skeleton/renderer/opengl/: opengl_renderer.cpp  opengl_renderer.hpp
skeleton/src/skeleton/renderer/vulkan/: vulkan_check.cpp  vulkan_check.hpp  vulkan_device.cpp  vulkan_device_queue_families.cpp  vulkan_device_queue_families.hpp  vulkan_extensions.cpp  vulkan_extensions.hpp  vulkan_instance.cpp  vulkan_physical_device.cpp  vulkan_renderer.cpp  vulkan_renderer.hpp  vulkan_swapchain.cpp  vulkan_swapchain_image_views.cpp  vulkan_swapchain_support.cpp  vulkan_swapchain_support.hpp  vulkan_window_surface.cpp
skeleton/src/skeleton/renderer/vulkan/pipeline/: vulkan_graphics_pipeline.cpp  vulkan_graphics_pipeline.hpp  vulkan_graphics_pipeline_settings.hpp
skeleton/src/skeleton/shaders/: test.frag.glsl  test.vert.glsl
skeleton/src/skeleton/window/: window.cpp  window.hpp
src/Skeleton/: input.cc  input.hh  main.cc  window.cc  window.hh
src/lib/glad/: CMakeLists.txt
src/lib/glad/include/glad/: gl.h
src/lib/imgui/: CMakeLists.txt
src/skeleton/: main.cc  window.cc  window.h
src/skeleton/renderer/: framebuffer.h  mesh.h  renderer.cc  renderer.h  renderer_backend.h
src/skeleton/renderer/opengl/: opengl_entity_shader.cc  opengl_entity_shader.h  opengl_framebuffer.cc  opengl_framebuffer.h  opengl_mesh.cc  opengl_mesh.h  opengl_renderer.cc  opengl_renderer.h  opengl_shader.cc  opengl_shader.h
src/skeleton/scene/: components.h  entity.cc  entity.h  scene.cc  scene.h
src/skeleton/ui/: docs.cc  docs.h  panel_info.cc  panel_info.h  properties.cc  properties.h  scene_graph.cc  scene_graph.h  ui.cc  ui.h  viewport.cc  viewport.h
